<resources>
    <string name="app_name">Mood Indigo 2016</string>
    <string name="facebook_app_id">1243571392349731</string>
    <string name="fb_login_protocol_scheme">fb1243571392349731</string>
    <string name="register_later">Register later</string>
    <string name="com_facebook_loginview_log_out_button">LOG IN WITH FACEBOOK</string>
    <string name="question1">Lorem Ipsum is simply dummy text of the printing and typesetting industry?</string>
    <string name="question2">Lorem Ipsum is simply dummy text of the printing and typesetting industry?</string>
    <string name="answer1">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of letrashet sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Adlus Pagemaker including versions of Lorem Ipsum.</string>
    <string name="answer2">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of letrashet sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Adlus Pagemaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_main">Mood Indigo 2016</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="event_name">EVENT NAME</string>
    <string name="genre_name">Genre Name</string>
    <string name="event_venue">Event Venue</string>
    <string name="time">Time</string>
    <string name="event_info">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a gallery of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of letrashet sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Adlus Pagemaker including versions of Lorem Ipsum.</string>
    <string name="title_activity_maps">Map</string>
    <string name="question3">How do I register for Mood Indigo?</string>
    <string name="answer3">Go to the Register tab to get your MI number.</string>
    <string name="question4">What is LYP?</string>
    <string name="answer4">LYP stands for Live Your Passion. This is an initiative taken up by Mood Indigo in order to promote and showcase the talent of our winners of competitions. Wherever applicable they are mentioned in the competition details itself.</string>
    <string name="question5">How do I register for a competition?</string>
    <string name="answer5">If you do not have a MI Number then go to the registration tab and register yourself there to get an MI Number.Then go to the competition tab and use that MI Number to register in that competition. If you already have an MI Number then directly register for the competition by clicking on the respective competition name.</string>
    <string name="question6">Are there any on spot registration allowed?</string>
    <string name="answer6">On spot registration are subject to already registered participants.</string>
    <string name="question7">What will be the venues/time of our competitions?</string>
    <string name="answer7">On entering the campus during the festival you will be handed a schedule of the competitions along with their venues. Schedule and venue will also be launched before the festival through our facebook page. Please follow our page to get regular updates about the same.</string>
    <string name="question8">How can I attend the concerts?</string>
    <string name="answer8">All the concerts are free for all. You just need to collect passes against your college id at the hospitality desk.</string>
    <string name="question9">Am I eligible to attend a concert?</string>
    <string name="answer9">Yes! Anyone having an MI number.</string>
    <string name="question10">What about passes?</string>
    <string name="answer10">You can collect them from the Hospi Desk in the morning at 7:30am on the day of the concert.</string>
    <string name="question11">Can I leave and again enter?</string>
    <string name="answer11">No.</string>
    <string name="question12">What all should I bring along?</string>
    <string name="answer12">Nothing other than your friends. Cameras, cosmetics, pointed objects like scissors, knives etc are not allowed.</string>
    <string name="question13">Can I take photos?</string>
    <string name="answer13">Preferably not. You just stood in a huge queue to see it live, why ruin it for just showing it to others!</string>
    <string name="question14">Can I carry water?</string>
    <string name="answer14">It is not required, there are arrangements inside. Moreover there is the food court.</string>
    <string name="question15">What type of accommodation will be provided?</string>
    <string name="answer15">Accommodation will be provided to boys and girls in well secured separate residential complexes on the campus of IIT Bombay.</string>
    <string name="question16">Does accommodation fee include the food facility as well?</string>
    <string name="answer16">No. The accommodation charges don’t include food. However, there will be food courts operational during Mood Indigo to cater to the food requirements.</string>
    <string name="question17">When will you confirm my accommodation?</string>
    <string name="answer17">You first need to register for Mood Indigo and get your MI number. Your accommodation will then be confirmed by the CL in coordination with the Hospitality Core Group members. The confirmation for the same will be communicated to the CL before 5th December.</string>
    <string name="question18">What are the accommodation charges for Mood Indigo 2016?</string>
    <string name="answer18">For people paying online, an amount of Rs.1600* per person is the accommodation fee out of which Rs.100 is refundable. For people paying the accommodation fee after coming to Mood Indigo, an amount of Rs.1600* per person will be charged out of which Rs.100 is refundable. In exceptional circumstances the refund amount may be forfeited subject to one or more of the following conditions: i) Permanent damage has been done to the room/dorm/accessories where accommodation has been provided. ii) Rooms are not vacated on or before 27th December 1200 hrs. *The charges will be the same irrespective of duration of stay up to a maximum of five days i.e. from 22th en dash 26rd December</string>
    <string name="question19">What is the procedure for online payment of accommodation fee?</string>
    <string name="answer19">Once a particular contingent is finalised by CL and their accommodation is confirmed by Hospitality and PR CGs, each and every person with confirmed accommodation will be given a link to the payment portal where he/she needs to make the payment online. In case an individual wishes to make online payment of some other people in his/her contingent as well, the option for the same would be available.</string>
    <string name="question20">We are a group of friends not participating in any of the major competitions and just coming to MI to have fun. Would we be allowed?</string>
    <string name="answer20">Yes, you can definitely attend MI by registering from your respective college. However, for accommodation you can contact the Hospitality Core Group members and request for accommodation. Accommodation would be confirmed strictly subject to availability.</string>
    <string name="question21">What is the procedure to be followed after we reach IIT Bombay?</string>
    <string name="answer21">You need to come to the Accommodation Desk, Students Activity Centre (SAC) along with your college identity card. You will be allotted your place of stay on campus and given a registration booklet. In case of a big contingent, contingent leader needs to present the ID cards of all the people in his contingent at the accommodation desk along with a list of all the people. Accommodation would be strictly on shared basis.</string>
    <string name="question22">What is the job of a Contingent Leader?</string>
    <string name="answer22">CL acts as a representative between MI and his college, thus conveying all Mood Indigo information to students of his/her college. The CL is also responsible for applying for accommodation on behalf of the college students. The CL gets a certificate of appreciation from Mood Indigo, IIT Bombay after completion of his/her duties.</string>
    <string name="question23">What is the procedure for being nominated as the Contingent Leader?</string>
    <string name="answer23">In order to be nominated as the CL for your college, you need an official letterhead of your college signed by the director/ principal saying that you have been nominated as the Contingent Leader for Mood Indigo 2016. Along with you, names of two other people should also be there who would be the Assistant CL. All three of you must mention your MI number along with your name in the letter. Send a scanned copy of the same to sanskar@moodi.org or hemant@moodi.org. All this should be done before October 30, 2016.</string>
    <string name="question24">We have no such cultural committee in the college to nominate a CL and we are just a group of 4 en dash 5 people coming down to participate at MI 2016. How do we proceed?</string>
    <string name="answer24">You should nominate a CL/ACL amongst yourselves, get it approved from the college and then proceed in the regular manner.</string>
    <string name="question25">I am not travelling with my college contingent and will be arriving separately. What should I do?</string>
    <string name="answer25">You need to proceed with the registration in a similar way. Irrespective of your time of arrival, your CL will have to register and ensure complete payment of his/her contingent. As your registration at SAC would have been done by your CL you can then contact him/her and directly arrive at your place of stay.</string>
    <string name="back">BACK</string>
    <string name="faqs">FAQs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

