<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ConcertsFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp">
            <TextView
                android:text="@string/question8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
