<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HospitalityFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp">
            <TextView
                android:text="@string/question15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
