<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ClInfoFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp">
            <TextView
                android:text="@string/question22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
