<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CompetitionsFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="16dp"
            >
            <TextView
                android:text="@string/question4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/question7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:text="@string/answer7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="20dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
