<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/answer2"
        android:textSize="20sp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"/>
</LinearLayout>